@@ -170,6 +170,7 @@ Library nnet
 - the multinom methods for add1, dropterm and anova now check
   for changes in the number of cases in use caused e.g. by na.action=na.omit.
 - added confint() method for multinom.
+- added logLik() method for multinom.
 
 
 
