@@ -20,6 +20,7 @@ S3method(coef, multinom)
 S3method(confint, multinom)
 S3method(drop1, multinom)
 S3method(extractAIC, multinom)
+S3method(logLik, multinom)
 S3method(model.frame, multinom)
 S3method(predict, multinom)
 S3method(print, multinom)
